welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:5: error: '=>' expected but integer literal found.
    case <=60 => return 0;
           ^caughtSpeeding:6: error: '=>' expected but integer literal found.
    case <=80 => return 1;
           ^caughtSpeeding:7: error: '=>' expected but integer literal found.
    case >=81 => return 2;
           ^