welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
  if (isBirthday)
  	speed = speed -5
  speed match{
    case <=60 => return 0;
    case <=80 => return 1;
    case >=81 => return 2;
  }
}